--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 			<ul class="stepper">
-				<li></li>
+				<li class="activ"></li>
 				<li></li>
 				<li></li>
 				<li></li>
