--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
 			</div>
 			<ul class="stepper">
 				<li class="activ"></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>
+					<div class="line"></div>
+				</li>
+				<li>
+					<div class="line"></div>
+				</li>
+				<li>
+					<div class="line"></div>
+				</li>
+				<li>
+					<div class="line"></div>
+				</li>
 			</ul>
 		</nav>
 	</main>
