--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 		<section class="top">
 			<div class="left">
 				<div class="logos">
-					<img class="activ" src="assets/first_logo.png">
-					<img src="assets/second_logo.png">
-					<img src="assets/third_logo.png">
+					<img id="logo" class="activ" src="assets/first_logo.png">
+					<img id="logo" src="assets/second_logo.png">
+					<img id="logo" src="assets/third_logo.png">
 				</div>
 				<div class="titles">
-					<h1 class="activ">Un nouvel espoir</h1>
-					<h1 class="new">L'empire contre-attaque</h1>
-					<h1>Le retour du Jedi</h1>
+					<h1 id="title" class="activ">Un nouvel espoir</h1>
+					<h1 id="title">L'empire contre-attaque</h1>
+					<h1 id="title">Le retour du Jedi</h1>
 				</div>
 				<div class="descriptions">
-					<p class="activ">
+					<p id="description" class="activ">
 						C'est le premier opus de la saga Star Wars par sa date de sortie, mais le quatrième selon l'ordre chronologique de l'histoire.
 					</p>
-					<p class="new">
+					<p id="description">
 						La guerre entre le maléfique Empire galactique et son antagoniste, l'Alliance rebelle, bat son plein.
 					</p>
-					<p>
+					<p id="description">
 						Le maléfique Empire galactique construit une nouvelle station spatiale Étoile de la mort pour anéantir définitivement l'Alliance rebelle.
 					</p>
 				</div>
@@ -38,9 +38,9 @@
 			</div>
 			<div class="right">
 				<div class="pictures">
-					<div class="image activ" style="background-image: url(assets/st1.png);"></div>
-					<div class="image new" style="background-image: url(assets/st2.png);"></div>
-					<div class="image" style="background-image: url(assets/st3.png);"></div>
+					<div id= "picture" class="image activ" style="background-image: url(assets/st1.png);"></div>
+					<div id= "picture" class="image" style="background-image: url(assets/st2.png);"></div>
+					<div id= "picture" class="image" style="background-image: url(assets/st3.png);"></div>
 				</div>
 			</div>
 		</section>
